lexer.output
Rules useless in parser due to conflicts

   12 declaEnum: error ';'

   27 declaVoF: error ';'

   43 sentencia: error ';'

   49 sentExpresion: error ';'

   64 sentSalto: error ';'


State 2 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 21 conflicts: 1 shift/reduce
State 24 conflicts: 21 reduce/reduce
State 46 conflicts: 110 reduce/reduce
State 98 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: items

    2 items: ε
    3      | items item

    4 item: declaracion
    5     | sentencia

    6 declaracion: declaVoF
    7            | declaEnum
    8            | error ';'
    9            | error '}'

   10 @1: ε

   11 declaEnum: ENUMERADOR IDENTIFICADOR '{' lista_enumeradores '}' @1 ids_opt
   12          | error ';'

   13 ids_opt: ';'
   14        | lista_ids

   15 lista_ids: IDENTIFICADOR
   16          | lista_ids ',' IDENTIFICADOR

   17 lista_enumeradores: IDENTIFICADOR
   18                   | IDENTIFICADOR '=' ENTERO
   19                   | lista_enumeradores ',' IDENTIFICADOR
   20                   | lista_enumeradores ',' IDENTIFICADOR '=' ENTERO

   21 declaVoF: tipo_opt IDENTIFICADOR ';'
   22         | tipo_opt IDENTIFICADOR '(' parametros_opt ')' ';'

   23 @2: ε

   24 declaVoF: tipo_opt IDENTIFICADOR '=' @2 expOr ';'

   25 @3: ε

   26 declaVoF: tipo_opt IDENTIFICADOR '(' parametros_opt ')' @3 sentCompuesta
   27         | error ';'

   28 tipo_opt: TIPO_DATO
   29         | TIPO_DATO '*'
   30         | IDENTIFICADOR

   31 parametros_opt: ε
   32               | lista_parametros

   33 lista_parametros: parametro
   34                 | lista_parametros ',' parametro

   35 parametro: TIPO_DATO IDENTIFICADOR
   36          | TIPO_DATO '*' IDENTIFICADOR

   37 sentencia: sentCompuesta
   38          | sentExpresion
   39          | sentSeleccion
   40          | sentIteracion
   41          | sentSalto
   42          | declaracion
   43          | error ';'

   44 $@4: ε

   45 sentCompuesta: '{' $@4 items '}'
   46              | '{' error '}'

   47 sentExpresion: expresion_opt ';'
   48              | ';'
   49              | error ';'

   50 sentSeleccion: IF '(' error ')' sentencia opSent

   51 $@5: ε

   52 @6: ε

   53 sentSeleccion: IF '(' expresion ')' $@5 sentencia @6 opSent

   54 opSent: ε

   55 $@7: ε

   56 opSent: ELSE $@7 sentencia

   57 $@8: ε

   58 sentIteracion: WHILE '(' expresion ')' $@8 sentencia
   59              | WHILE '(' error ')' sentencia

   60 $@9: ε

   61 sentIteracion: FOR '(' expresion_opt ';' expresion_opt ';' expresion_opt ')' $@9 sentencia
   62              | FOR '(' error ')' sentencia

   63 sentSalto: RETURN expresion_opt ';'
   64          | error ';'

   65 expresion_opt: ε
   66              | expresion

   67 expresion: expOr
   68          | IDENTIFICADOR opAsignacion expOr
   69          | error

   70 opAsignacion: '='
   71             | MAS_IGUAL
   72             | MENOS_IGUAL
   73             | DIV_IGUAL
   74             | POR_IGUAL

   75 expOr: expAnd
   76      | expOr OR expAnd

   77 expAnd: expIgualdad
   78       | expAnd AND expIgualdad

   79 expIgualdad: expRelacional
   80            | expIgualdad IGUALDAD expRelacional
   81            | expIgualdad DIFERENTE expRelacional

   82 expRelacional: expAditiva
   83              | expRelacional MAYOR_IGUAL expAditiva
   84              | expRelacional '>' expAditiva
   85              | expRelacional MENOR_IGUAL expAditiva
   86              | expRelacional '<' expAditiva

   87 expAditiva: expMultiplicativa
   88           | expAditiva '+' expMultiplicativa
   89           | expAditiva '-' expMultiplicativa

   90 expMultiplicativa: expUnaria
   91                  | expMultiplicativa '*' expUnaria
   92                  | expMultiplicativa '/' expUnaria

   93 expUnaria: expPostfijo
   94          | operUnario expPostfijo
   95          | INCREMENTO expPrimaria
   96          | DECREMENTO expPrimaria

   97 operUnario: '-'
   98           | '!'

   99 expPostfijo: expPrimaria
  100            | IDENTIFICADOR '(' listaArgumentos ')'
  101            | expPrimaria INCREMENTO
  102            | expPrimaria DECREMENTO

  103 listaArgumentos: ε
  104                | argumento
  105                | listaArgumentos ',' argumento

  106 argumento: ENTERO
  107          | CADENA
  108          | NUMERO
  109          | CARACTER
  110          | IDENTIFICADOR

  111 expPrimaria: IDENTIFICADOR
  112            | ENTERO
  113            | NUMERO
  114            | CARACTER
  115            | CADENA
  116            | '(' expOr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 98
    '(' (40) 22 26 50 53 58 59 61 62 100 116
    ')' (41) 22 26 50 53 58 59 61 62 100 116
    '*' (42) 29 36 91
    '+' (43) 88
    ',' (44) 16 19 20 34 105
    '-' (45) 89 97
    '/' (47) 92
    ';' (59) 8 12 13 21 22 24 27 43 47 48 49 61 63 64
    '<' (60) 86
    '=' (61) 18 20 24 70
    '>' (62) 84
    '{' (123) 11 45 46
    '}' (125) 9 11 45 46
    error (256) 8 9 12 27 43 46 49 50 59 62 64 69
    ENTERO <ival> (258) 18 20 106 112
    NUMERO <dval> (259) 108 113
    CARACTER <cval> (260) 109 114
    CADENA <cadena> (261) 107 115
    TIPO_DATO <cadena> (262) 28 29 35 36
    IDENTIFICADOR <cadena> (263) 11 15 16 17 18 19 20 21 22 24 26 30 35 36 68 100 110 111
    RETURN <cadena> (264) 63
    FOR <cadena> (265) 61 62
    WHILE <cadena> (266) 58 59
    ELSE <cadena> (267) 56
    IF <cadena> (268) 50 53
    ENUMERADOR <cadena> (269) 11
    INCREMENTO (270) 95 101
    DECREMENTO (271) 96 102
    MAS_IGUAL (272) 71
    MENOS_IGUAL (273) 72
    DIV_IGUAL (274) 73
    POR_IGUAL (275) 74
    IGUALDAD (276) 80
    DIFERENTE (277) 81
    AND (278) 78
    OR (279) 76
    MAYOR_IGUAL (280) 83
    MENOR_IGUAL (281) 85
    UNARIO (282)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    input (43)
        on left: 1
        on right: 0
    items <cadena> (44)
        on left: 2 3
        on right: 1 3 45
    item (45)
        on left: 4 5
        on right: 3
    declaracion (46)
        on left: 6 7 8 9
        on right: 4 42
    declaEnum <s> (47)
        on left: 11 12
        on right: 7
    @1 (48)
        on left: 10
        on right: 11
    ids_opt <arr> (49)
        on left: 13 14
        on right: 11
    lista_ids <arr> (50)
        on left: 15 16
        on right: 14 16
    lista_enumeradores <arr> (51)
        on left: 17 18 19 20
        on right: 11 19 20
    declaVoF <s> (52)
        on left: 21 22 24 26 27
        on right: 6
    @2 (53)
        on left: 23
        on right: 24
    @3 (54)
        on left: 25
        on right: 26
    tipo_opt <cadena> (55)
        on left: 28 29 30
        on right: 21 22 24 26
    parametros_opt <arr> (56)
        on left: 31 32
        on right: 22 26
    lista_parametros <arr> (57)
        on left: 33 34
        on right: 32 34
    parametro <p> (58)
        on left: 35 36
        on right: 33 34
    sentencia <cadena> (59)
        on left: 37 38 39 40 41 42 43
        on right: 5 50 53 56 58 59 61 62
    sentCompuesta <cadena> (60)
        on left: 45 46
        on right: 26 37
    $@4 (61)
        on left: 44
        on right: 45
    sentExpresion (62)
        on left: 47 48 49
        on right: 38
    sentSeleccion <cadena> (63)
        on left: 50 53
        on right: 39
    $@5 (64)
        on left: 51
        on right: 53
    @6 (65)
        on left: 52
        on right: 53
    opSent <cadena> (66)
        on left: 54 56
        on right: 50 53
    $@7 (67)
        on left: 55
        on right: 56
    sentIteracion (68)
        on left: 58 59 61 62
        on right: 40
    $@8 (69)
        on left: 57
        on right: 58
    $@9 (70)
        on left: 60
        on right: 61
    sentSalto <cadena> (71)
        on left: 63 64
        on right: 41
    expresion_opt <expr> (72)
        on left: 65 66
        on right: 47 61 63
    expresion <expr> (73)
        on left: 67 68 69
        on right: 53 58 66
    opAsignacion <cadena> (74)
        on left: 70 71 72 73 74
        on right: 68
    expOr <expr> (75)
        on left: 75 76
        on right: 24 67 68 76 116
    expAnd <expr> (76)
        on left: 77 78
        on right: 75 76 78
    expIgualdad <expr> (77)
        on left: 79 80 81
        on right: 77 78 80 81
    expRelacional <expr> (78)
        on left: 82 83 84 85 86
        on right: 79 80 81 83 84 85 86
    expAditiva <expr> (79)
        on left: 87 88 89
        on right: 82 83 84 85 86 88 89
    expMultiplicativa <expr> (80)
        on left: 90 91 92
        on right: 87 88 89 91 92
    expUnaria <expr> (81)
        on left: 93 94 95 96
        on right: 90 91 92
    operUnario <cadena> (82)
        on left: 97 98
        on right: 94
    expPostfijo <expr> (83)
        on left: 99 100 101 102
        on right: 93 94
    listaArgumentos <arr> (84)
        on left: 103 104 105
        on right: 100 105
    argumento <cadena> (85)
        on left: 106 107 108 109 110
        on right: 104 105
    expPrimaria <expr> (86)
        on left: 111 112 113 114 115 116
        on right: 95 96 99 101 102


State 0

    0 $accept: • input $end

    $default  reduce using rule 2 (items)

    input  go to state 1
    items  go to state 2


State 1

    0 $accept: input • $end

    $end  shift, and go to state 3


State 2

    1 input: items •
    3 items: items • item

    error          shift, and go to state 4
    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    TIPO_DATO      shift, and go to state 9
    IDENTIFICADOR  shift, and go to state 10
    RETURN         shift, and go to state 11
    FOR            shift, and go to state 12
    WHILE          shift, and go to state 13
    IF             shift, and go to state 14
    ENUMERADOR     shift, and go to state 15
    INCREMENTO     shift, and go to state 16
    DECREMENTO     shift, and go to state 17
    '-'            shift, and go to state 18
    '!'            shift, and go to state 19
    ';'            shift, and go to state 20
    '{'            shift, and go to state 21
    '('            shift, and go to state 22

    $end  reduce using rule 1 (input)
    ';'   [reduce using rule 65 (expresion_opt)]

    item               go to state 23
    declaracion        go to state 24
    declaEnum          go to state 25
    declaVoF           go to state 26
    tipo_opt           go to state 27
    sentencia          go to state 28
    sentCompuesta      go to state 29
    sentExpresion      go to state 30
    sentSeleccion      go to state 31
    sentIteracion      go to state 32
    sentSalto          go to state 33
    expresion_opt      go to state 34
    expresion          go to state 35
    expOr              go to state 36
    expAnd             go to state 37
    expIgualdad        go to state 38
    expRelacional      go to state 39
    expAditiva         go to state 40
    expMultiplicativa  go to state 41
    expUnaria          go to state 42
    operUnario         go to state 43
    expPostfijo        go to state 44
    expPrimaria        go to state 45


State 3

    0 $accept: input $end •

    $default  accept


State 4

    8 declaracion: error • ';'
    9            | error • '}'
   12 declaEnum: error • ';'
   27 declaVoF: error • ';'
   43 sentencia: error • ';'
   49 sentExpresion: error • ';'
   64 sentSalto: error • ';'
   69 expresion: error •

    ';'  shift, and go to state 46
    '}'  shift, and go to state 47

    ';'  [reduce using rule 69 (expresion)]


State 5

  112 expPrimaria: ENTERO •

    $default  reduce using rule 112 (expPrimaria)


State 6

  113 expPrimaria: NUMERO •

    $default  reduce using rule 113 (expPrimaria)


State 7

  114 expPrimaria: CARACTER •

    $default  reduce using rule 114 (expPrimaria)


State 8

  115 expPrimaria: CADENA •

    $default  reduce using rule 115 (expPrimaria)


State 9

   28 tipo_opt: TIPO_DATO •
   29         | TIPO_DATO • '*'

    '*'  shift, and go to state 48

    $default  reduce using rule 28 (tipo_opt)


State 10

   30 tipo_opt: IDENTIFICADOR •
   68 expresion: IDENTIFICADOR • opAsignacion expOr
  100 expPostfijo: IDENTIFICADOR • '(' listaArgumentos ')'
  111 expPrimaria: IDENTIFICADOR •

    MAS_IGUAL    shift, and go to state 49
    MENOS_IGUAL  shift, and go to state 50
    DIV_IGUAL    shift, and go to state 51
    POR_IGUAL    shift, and go to state 52
    '='          shift, and go to state 53
    '('          shift, and go to state 54

    IDENTIFICADOR  reduce using rule 30 (tipo_opt)
    $default       reduce using rule 111 (expPrimaria)

    opAsignacion  go to state 55


State 11

   63 sentSalto: RETURN • expresion_opt ';'

    error          shift, and go to state 56
    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 57
    INCREMENTO     shift, and go to state 16
    DECREMENTO     shift, and go to state 17
    '-'            shift, and go to state 18
    '!'            shift, and go to state 19
    '('            shift, and go to state 22

    ';'  reduce using rule 65 (expresion_opt)

    expresion_opt      go to state 58
    expresion          go to state 35
    expOr              go to state 36
    expAnd             go to state 37
    expIgualdad        go to state 38
    expRelacional      go to state 39
    expAditiva         go to state 40
    expMultiplicativa  go to state 41
    expUnaria          go to state 42
    operUnario         go to state 43
    expPostfijo        go to state 44
    expPrimaria        go to state 45


State 12

   61 sentIteracion: FOR • '(' expresion_opt ';' expresion_opt ';' expresion_opt ')' $@9 sentencia
   62              | FOR • '(' error ')' sentencia

    '('  shift, and go to state 59


State 13

   58 sentIteracion: WHILE • '(' expresion ')' $@8 sentencia
   59              | WHILE • '(' error ')' sentencia

    '('  shift, and go to state 60


State 14

   50 sentSeleccion: IF • '(' error ')' sentencia opSent
   53              | IF • '(' expresion ')' $@5 sentencia @6 opSent

    '('  shift, and go to state 61


State 15

   11 declaEnum: ENUMERADOR • IDENTIFICADOR '{' lista_enumeradores '}' @1 ids_opt

    IDENTIFICADOR  shift, and go to state 62


State 16

   95 expUnaria: INCREMENTO • expPrimaria

    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 63
    '('            shift, and go to state 22

    expPrimaria  go to state 64


State 17

   96 expUnaria: DECREMENTO • expPrimaria

    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 63
    '('            shift, and go to state 22

    expPrimaria  go to state 65


State 18

   97 operUnario: '-' •

    $default  reduce using rule 97 (operUnario)


State 19

   98 operUnario: '!' •

    $default  reduce using rule 98 (operUnario)


State 20

   48 sentExpresion: ';' •

    $default  reduce using rule 48 (sentExpresion)


State 21

   45 sentCompuesta: '{' • $@4 items '}'
   46              | '{' • error '}'

    error  shift, and go to state 66

    error          [reduce using rule 44 ($@4)]
    ENTERO         reduce using rule 44 ($@4)
    NUMERO         reduce using rule 44 ($@4)
    CARACTER       reduce using rule 44 ($@4)
    CADENA         reduce using rule 44 ($@4)
    TIPO_DATO      reduce using rule 44 ($@4)
    IDENTIFICADOR  reduce using rule 44 ($@4)
    RETURN         reduce using rule 44 ($@4)
    FOR            reduce using rule 44 ($@4)
    WHILE          reduce using rule 44 ($@4)
    IF             reduce using rule 44 ($@4)
    ENUMERADOR     reduce using rule 44 ($@4)
    INCREMENTO     reduce using rule 44 ($@4)
    DECREMENTO     reduce using rule 44 ($@4)
    '-'            reduce using rule 44 ($@4)
    '!'            reduce using rule 44 ($@4)
    ';'            reduce using rule 44 ($@4)
    '}'            reduce using rule 44 ($@4)
    '{'            reduce using rule 44 ($@4)
    '('            reduce using rule 44 ($@4)

    $@4  go to state 67


State 22

  116 expPrimaria: '(' • expOr ')'

    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 68
    INCREMENTO     shift, and go to state 16
    DECREMENTO     shift, and go to state 17
    '-'            shift, and go to state 18
    '!'            shift, and go to state 19
    '('            shift, and go to state 22

    expOr              go to state 69
    expAnd             go to state 37
    expIgualdad        go to state 38
    expRelacional      go to state 39
    expAditiva         go to state 40
    expMultiplicativa  go to state 41
    expUnaria          go to state 42
    operUnario         go to state 43
    expPostfijo        go to state 44
    expPrimaria        go to state 45


State 23

    3 items: items item •

    $default  reduce using rule 3 (items)


State 24

    4 item: declaracion •
   42 sentencia: declaracion •

    $end           reduce using rule 4 (item)
    $end           [reduce using rule 42 (sentencia)]
    error          reduce using rule 4 (item)
    error          [reduce using rule 42 (sentencia)]
    ENTERO         reduce using rule 4 (item)
    ENTERO         [reduce using rule 42 (sentencia)]
    NUMERO         reduce using rule 4 (item)
    NUMERO         [reduce using rule 42 (sentencia)]
    CARACTER       reduce using rule 4 (item)
    CARACTER       [reduce using rule 42 (sentencia)]
    CADENA         reduce using rule 4 (item)
    CADENA         [reduce using rule 42 (sentencia)]
    TIPO_DATO      reduce using rule 4 (item)
    TIPO_DATO      [reduce using rule 42 (sentencia)]
    IDENTIFICADOR  reduce using rule 4 (item)
    IDENTIFICADOR  [reduce using rule 42 (sentencia)]
    RETURN         reduce using rule 4 (item)
    RETURN         [reduce using rule 42 (sentencia)]
    FOR            reduce using rule 4 (item)
    FOR            [reduce using rule 42 (sentencia)]
    WHILE          reduce using rule 4 (item)
    WHILE          [reduce using rule 42 (sentencia)]
    IF             reduce using rule 4 (item)
    IF             [reduce using rule 42 (sentencia)]
    ENUMERADOR     reduce using rule 4 (item)
    ENUMERADOR     [reduce using rule 42 (sentencia)]
    INCREMENTO     reduce using rule 4 (item)
    INCREMENTO     [reduce using rule 42 (sentencia)]
    DECREMENTO     reduce using rule 4 (item)
    DECREMENTO     [reduce using rule 42 (sentencia)]
    '-'            reduce using rule 4 (item)
    '-'            [reduce using rule 42 (sentencia)]
    '!'            reduce using rule 4 (item)
    '!'            [reduce using rule 42 (sentencia)]
    ';'            reduce using rule 4 (item)
    ';'            [reduce using rule 42 (sentencia)]
    '}'            reduce using rule 4 (item)
    '}'            [reduce using rule 42 (sentencia)]
    '{'            reduce using rule 4 (item)
    '{'            [reduce using rule 42 (sentencia)]
    '('            reduce using rule 4 (item)
    '('            [reduce using rule 42 (sentencia)]
    $default       reduce using rule 4 (item)


State 25

    7 declaracion: declaEnum •

    $default  reduce using rule 7 (declaracion)


State 26

    6 declaracion: declaVoF •

    $default  reduce using rule 6 (declaracion)


State 27

   21 declaVoF: tipo_opt • IDENTIFICADOR ';'
   22         | tipo_opt • IDENTIFICADOR '(' parametros_opt ')' ';'
   24         | tipo_opt • IDENTIFICADOR '=' @2 expOr ';'
   26         | tipo_opt • IDENTIFICADOR '(' parametros_opt ')' @3 sentCompuesta

    IDENTIFICADOR  shift, and go to state 70


State 28

    5 item: sentencia •

    $default  reduce using rule 5 (item)


State 29

   37 sentencia: sentCompuesta •

    $default  reduce using rule 37 (sentencia)


State 30

   38 sentencia: sentExpresion •

    $default  reduce using rule 38 (sentencia)


State 31

   39 sentencia: sentSeleccion •

    $default  reduce using rule 39 (sentencia)


State 32

   40 sentencia: sentIteracion •

    $default  reduce using rule 40 (sentencia)


State 33

   41 sentencia: sentSalto •

    $default  reduce using rule 41 (sentencia)


State 34

   47 sentExpresion: expresion_opt • ';'

    ';'  shift, and go to state 71


State 35

   66 expresion_opt: expresion •

    $default  reduce using rule 66 (expresion_opt)


State 36

   67 expresion: expOr •
   76 expOr: expOr • OR expAnd

    OR  shift, and go to state 72

    $default  reduce using rule 67 (expresion)


State 37

   75 expOr: expAnd •
   78 expAnd: expAnd • AND expIgualdad

    AND  shift, and go to state 73

    $default  reduce using rule 75 (expOr)


State 38

   77 expAnd: expIgualdad •
   80 expIgualdad: expIgualdad • IGUALDAD expRelacional
   81            | expIgualdad • DIFERENTE expRelacional

    IGUALDAD   shift, and go to state 74
    DIFERENTE  shift, and go to state 75

    $default  reduce using rule 77 (expAnd)


State 39

   79 expIgualdad: expRelacional •
   83 expRelacional: expRelacional • MAYOR_IGUAL expAditiva
   84              | expRelacional • '>' expAditiva
   85              | expRelacional • MENOR_IGUAL expAditiva
   86              | expRelacional • '<' expAditiva

    MAYOR_IGUAL  shift, and go to state 76
    MENOR_IGUAL  shift, and go to state 77
    '<'          shift, and go to state 78
    '>'          shift, and go to state 79

    $default  reduce using rule 79 (expIgualdad)


State 40

   82 expRelacional: expAditiva •
   88 expAditiva: expAditiva • '+' expMultiplicativa
   89           | expAditiva • '-' expMultiplicativa

    '+'  shift, and go to state 80
    '-'  shift, and go to state 81

    $default  reduce using rule 82 (expRelacional)


State 41

   87 expAditiva: expMultiplicativa •
   91 expMultiplicativa: expMultiplicativa • '*' expUnaria
   92                  | expMultiplicativa • '/' expUnaria

    '*'  shift, and go to state 82
    '/'  shift, and go to state 83

    $default  reduce using rule 87 (expAditiva)


State 42

   90 expMultiplicativa: expUnaria •

    $default  reduce using rule 90 (expMultiplicativa)


State 43

   94 expUnaria: operUnario • expPostfijo

    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 68
    '('            shift, and go to state 22

    expPostfijo  go to state 84
    expPrimaria  go to state 45


State 44

   93 expUnaria: expPostfijo •

    $default  reduce using rule 93 (expUnaria)


State 45

   99 expPostfijo: expPrimaria •
  101            | expPrimaria • INCREMENTO
  102            | expPrimaria • DECREMENTO

    INCREMENTO  shift, and go to state 85
    DECREMENTO  shift, and go to state 86

    $default  reduce using rule 99 (expPostfijo)


State 46

    8 declaracion: error ';' •
   12 declaEnum: error ';' •
   27 declaVoF: error ';' •
   43 sentencia: error ';' •
   49 sentExpresion: error ';' •
   64 sentSalto: error ';' •

    $end           reduce using rule 8 (declaracion)
    $end           [reduce using rule 12 (declaEnum)]
    $end           [reduce using rule 27 (declaVoF)]
    $end           [reduce using rule 43 (sentencia)]
    $end           [reduce using rule 49 (sentExpresion)]
    $end           [reduce using rule 64 (sentSalto)]
    error          reduce using rule 8 (declaracion)
    error          [reduce using rule 12 (declaEnum)]
    error          [reduce using rule 27 (declaVoF)]
    error          [reduce using rule 43 (sentencia)]
    error          [reduce using rule 49 (sentExpresion)]
    error          [reduce using rule 64 (sentSalto)]
    ENTERO         reduce using rule 8 (declaracion)
    ENTERO         [reduce using rule 12 (declaEnum)]
    ENTERO         [reduce using rule 27 (declaVoF)]
    ENTERO         [reduce using rule 43 (sentencia)]
    ENTERO         [reduce using rule 49 (sentExpresion)]
    ENTERO         [reduce using rule 64 (sentSalto)]
    NUMERO         reduce using rule 8 (declaracion)
    NUMERO         [reduce using rule 12 (declaEnum)]
    NUMERO         [reduce using rule 27 (declaVoF)]
    NUMERO         [reduce using rule 43 (sentencia)]
    NUMERO         [reduce using rule 49 (sentExpresion)]
    NUMERO         [reduce using rule 64 (sentSalto)]
    CARACTER       reduce using rule 8 (declaracion)
    CARACTER       [reduce using rule 12 (declaEnum)]
    CARACTER       [reduce using rule 27 (declaVoF)]
    CARACTER       [reduce using rule 43 (sentencia)]
    CARACTER       [reduce using rule 49 (sentExpresion)]
    CARACTER       [reduce using rule 64 (sentSalto)]
    CADENA         reduce using rule 8 (declaracion)
    CADENA         [reduce using rule 12 (declaEnum)]
    CADENA         [reduce using rule 27 (declaVoF)]
    CADENA         [reduce using rule 43 (sentencia)]
    CADENA         [reduce using rule 49 (sentExpresion)]
    CADENA         [reduce using rule 64 (sentSalto)]
    TIPO_DATO      reduce using rule 8 (declaracion)
    TIPO_DATO      [reduce using rule 12 (declaEnum)]
    TIPO_DATO      [reduce using rule 27 (declaVoF)]
    TIPO_DATO      [reduce using rule 43 (sentencia)]
    TIPO_DATO      [reduce using rule 49 (sentExpresion)]
    TIPO_DATO      [reduce using rule 64 (sentSalto)]
    IDENTIFICADOR  reduce using rule 8 (declaracion)
    IDENTIFICADOR  [reduce using rule 12 (declaEnum)]
    IDENTIFICADOR  [reduce using rule 27 (declaVoF)]
    IDENTIFICADOR  [reduce using rule 43 (sentencia)]
    IDENTIFICADOR  [reduce using rule 49 (sentExpresion)]
    IDENTIFICADOR  [reduce using rule 64 (sentSalto)]
    RETURN         reduce using rule 8 (declaracion)
    RETURN         [reduce using rule 12 (declaEnum)]
    RETURN         [reduce using rule 27 (declaVoF)]
    RETURN         [reduce using rule 43 (sentencia)]
    RETURN         [reduce using rule 49 (sentExpresion)]
    RETURN         [reduce using rule 64 (sentSalto)]
    FOR            reduce using rule 8 (declaracion)
    FOR            [reduce using rule 12 (declaEnum)]
    FOR            [reduce using rule 27 (declaVoF)]
    FOR            [reduce using rule 43 (sentencia)]
    FOR            [reduce using rule 49 (sentExpresion)]
    FOR            [reduce using rule 64 (sentSalto)]
    WHILE          reduce using rule 8 (declaracion)
    WHILE          [reduce using rule 12 (declaEnum)]
    WHILE          [reduce using rule 27 (declaVoF)]
    WHILE          [reduce using rule 43 (sentencia)]
    WHILE          [reduce using rule 49 (sentExpresion)]
    WHILE          [reduce using rule 64 (sentSalto)]
    ELSE           reduce using rule 8 (declaracion)
    ELSE           [reduce using rule 12 (declaEnum)]
    ELSE           [reduce using rule 27 (declaVoF)]
    ELSE           [reduce using rule 43 (sentencia)]
    ELSE           [reduce using rule 49 (sentExpresion)]
    ELSE           [reduce using rule 64 (sentSalto)]
    IF             reduce using rule 8 (declaracion)
    IF             [reduce using rule 12 (declaEnum)]
    IF             [reduce using rule 27 (declaVoF)]
    IF             [reduce using rule 43 (sentencia)]
    IF             [reduce using rule 49 (sentExpresion)]
    IF             [reduce using rule 64 (sentSalto)]
    ENUMERADOR     reduce using rule 8 (declaracion)
    ENUMERADOR     [reduce using rule 12 (declaEnum)]
    ENUMERADOR     [reduce using rule 27 (declaVoF)]
    ENUMERADOR     [reduce using rule 43 (sentencia)]
    ENUMERADOR     [reduce using rule 49 (sentExpresion)]
    ENUMERADOR     [reduce using rule 64 (sentSalto)]
    INCREMENTO     reduce using rule 8 (declaracion)
    INCREMENTO     [reduce using rule 12 (declaEnum)]
    INCREMENTO     [reduce using rule 27 (declaVoF)]
    INCREMENTO     [reduce using rule 43 (sentencia)]
    INCREMENTO     [reduce using rule 49 (sentExpresion)]
    INCREMENTO     [reduce using rule 64 (sentSalto)]
    DECREMENTO     reduce using rule 8 (declaracion)
    DECREMENTO     [reduce using rule 12 (declaEnum)]
    DECREMENTO     [reduce using rule 27 (declaVoF)]
    DECREMENTO     [reduce using rule 43 (sentencia)]
    DECREMENTO     [reduce using rule 49 (sentExpresion)]
    DECREMENTO     [reduce using rule 64 (sentSalto)]
    '-'            reduce using rule 8 (declaracion)
    '-'            [reduce using rule 12 (declaEnum)]
    '-'            [reduce using rule 27 (declaVoF)]
    '-'            [reduce using rule 43 (sentencia)]
    '-'            [reduce using rule 49 (sentExpresion)]
    '-'            [reduce using rule 64 (sentSalto)]
    '!'            reduce using rule 8 (declaracion)
    '!'            [reduce using rule 12 (declaEnum)]
    '!'            [reduce using rule 27 (declaVoF)]
    '!'            [reduce using rule 43 (sentencia)]
    '!'            [reduce using rule 49 (sentExpresion)]
    '!'            [reduce using rule 64 (sentSalto)]
    ';'            reduce using rule 8 (declaracion)
    ';'            [reduce using rule 12 (declaEnum)]
    ';'            [reduce using rule 27 (declaVoF)]
    ';'            [reduce using rule 43 (sentencia)]
    ';'            [reduce using rule 49 (sentExpresion)]
    ';'            [reduce using rule 64 (sentSalto)]
    '}'            reduce using rule 8 (declaracion)
    '}'            [reduce using rule 12 (declaEnum)]
    '}'            [reduce using rule 27 (declaVoF)]
    '}'            [reduce using rule 43 (sentencia)]
    '}'            [reduce using rule 49 (sentExpresion)]
    '}'            [reduce using rule 64 (sentSalto)]
    '{'            reduce using rule 8 (declaracion)
    '{'            [reduce using rule 12 (declaEnum)]
    '{'            [reduce using rule 27 (declaVoF)]
    '{'            [reduce using rule 43 (sentencia)]
    '{'            [reduce using rule 49 (sentExpresion)]
    '{'            [reduce using rule 64 (sentSalto)]
    '('            reduce using rule 8 (declaracion)
    '('            [reduce using rule 12 (declaEnum)]
    '('            [reduce using rule 27 (declaVoF)]
    '('            [reduce using rule 43 (sentencia)]
    '('            [reduce using rule 49 (sentExpresion)]
    '('            [reduce using rule 64 (sentSalto)]
    $default       reduce using rule 8 (declaracion)


State 47

    9 declaracion: error '}' •

    $default  reduce using rule 9 (declaracion)


State 48

   29 tipo_opt: TIPO_DATO '*' •

    $default  reduce using rule 29 (tipo_opt)


State 49

   71 opAsignacion: MAS_IGUAL •

    $default  reduce using rule 71 (opAsignacion)


State 50

   72 opAsignacion: MENOS_IGUAL •

    $default  reduce using rule 72 (opAsignacion)


State 51

   73 opAsignacion: DIV_IGUAL •

    $default  reduce using rule 73 (opAsignacion)


State 52

   74 opAsignacion: POR_IGUAL •

    $default  reduce using rule 74 (opAsignacion)


State 53

   70 opAsignacion: '=' •

    $default  reduce using rule 70 (opAsignacion)


State 54

  100 expPostfijo: IDENTIFICADOR '(' • listaArgumentos ')'

    ENTERO         shift, and go to state 87
    NUMERO         shift, and go to state 88
    CARACTER       shift, and go to state 89
    CADENA         shift, and go to state 90
    IDENTIFICADOR  shift, and go to state 91

    $default  reduce using rule 103 (listaArgumentos)

    listaArgumentos  go to state 92
    argumento        go to state 93


State 55

   68 expresion: IDENTIFICADOR opAsignacion • expOr

    ENTERO         shift, and go to state 5
    NUMERO         shift, and go to state 6
    CARACTER       shift, and go to state 7
    CADENA         shift, and go to state 8
    IDENTIFICADOR  shift, and go to state 68
    INCREMENTO     shift, and go to state 16
    DECREMENTO     shift, and go to state 17
    '-'            shift, and go to state 18
    '!'            shift, and go to state 19
    '('            shift, and go to state 22
